# Trabalho_AEDS1

./: .gitignore  Anotacoes.md  CMakeLists.txt  Readme.md  c.c  main.c  main.tex  makefile
Aluno/: aluno.c  aluno.h
Aula/: aula.c  aula.h
Avaliacao/: avaliacao.c  avaliacao.h
Hashing/: hashing.c  hashing.h
ListaAlunos/: listaalunos.c  listaalunos.h
Presenca/: presenca.c  presenca.h
SalaDeAula/: saladeaula.c  saladeaula.h
Sorting/: sorting.c  sorting.h
make_old/: makefile
utils/: utils.c  utils.h
